--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,7 +9,7 @@ a {
 }
 
 .button:hover {
-    background-color: #e6e6fa; /*Contrast against text color: https://webaim.org/resources/contrastchecker/?fcolor=1F1F1F&bcolor=E6E6FA*/
+    background-color: #a9c2e8; /*Contrast against text color: https://webaim.org/resources/contrastchecker/?fcolor=A9C2E8&bcolor=1F1F1F*/
     color: #1f1f1f;
 }
 
